2005-08-10  David Zeuthen  <davidz@redhat.com>

	* libgnomevfs/gnome-vfs-hal-mounts.c:
	(_gnome_vfs_hal_mounts_modify_volume): Handle the drives that HAL
	doesn't detect media for (e.g. IDE Zip drives, legacy x86 floppies)

2005-07-28  Tor Lillqvist  <tml@novell.com>

	* imported/neon/Makefile.am (libneon_la_LDFLAGS): As libneon is a
	static library, no need to link with libgnomevfs, especially as it
	isn't even built yet after the below change.

2005-07-27  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (SUBDIRS): Reorder: put imported first, as the
	xdgmime stuff in libgnomevfs depends on imported/fnmatch on Win32.

	* libgnomevfs/gnome-vfs-ssl.c: Use <winsock2.h> on Win32.

2005-07-25  Christian Kellner  <gicmo@gnome.org>
	
	* configure.in:
	Post release version bump.

=== gnome-vfs 2.11.90 ===

2005-07-25  Christian Kellner  <gicmo@gnome.org>

	* NEWS:
	Update for release
		
	* configure.in:
	Bump to version 2.11.90

2005-07-24  Christian Kellner  <gicmo@gnome.org>

	* configure.in: Indicate if we build the cdda method
	* modules/cdda-cddb.c: (CDDBRead): Initialize disc. This should
	fix bug #309661.

2005-07-24  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-hal-mounts.c:
	(_hal_drive_policy_get_display_name): 
	Avoid displaying (null) if the CD-ROM is not a combo
	drive. Fixes bug #310296. 
	Patch from Sebastien Bacher <seb128@debian.org>.

2005-07-23  Christian Kellner  <gicmo@gnome.org>

	* modules/http-neon-method.c: Don't loop ad infinitum when
	authentication fails on GET. Also fix a Typo. 
	Fixes bug #310596. Patch from jylefort@FreeBSD.org.
	
2005-07-18  Sebastien Bacher  <seb128@debian.org>

	* libgnomevfs/gnome-vfs-filesystem-type.c:
	list reiser4, fix the trash issues with it,
	patch by James Lademann <jwlademann@myrealbox.com> (Closes: #153100).

2005-07-18  Alexander Larsson  <alexl@redhat.com>

	* modules/sftp-method.c:
	Handle errors correctly (#304022)
	Patch from Sebastien Bacher
