@@ -1,3 +1,11 @@
+2005-08-23  Stepan Kasal  <kasal@ucw.cz>
+
+	* acinclude.m4 (LIBNEON_SOURCE_CHECKS): NEON_SSL is an autoconf
+	macro in current version of neon; we have to temporarily redefine
+	it if we want to use it as AC_DEFINEd symbol.
+
+	* configure.in: Improve quoting and other cosmetic changes.
+
 2005-08-10  David Zeuthen  <davidz@redhat.com>
 
 	* libgnomevfs/gnome-vfs-hal-mounts.c:
